--- a/package.json
+++ b/package.json
@@ -4,19 +4,16 @@
   "type": "module",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.0.8"
   },
   "scripts": {
     "start": "nodemon app.js"
   },
-
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
     "nodemon": "^2.0.13"
   }
-
-
-
 }
